--- a/frontend/src/app/components/language-card/language-card.component.html
+++ b/frontend/src/app/components/language-card/language-card.component.html
@@ -1,6 +1,6 @@
-<div class="card">
-    <div class="container col-md-6">
-        <h4><b>{{name}}</b></h4>
-        <p>{{description}}</p>
-    </div>
+<div class="card offset-md-1 col-md-4">
+        <div class="container">
+            <h4><b>{{name}}</b></h4>
+            <p>{{description}}</p>
+        </div>
 </div>
