Add language in dashboard

--- a/frontend/src/app/components/language-card/language-card.component.html
+++ b/frontend/src/app/components/language-card/language-card.component.html
@@ -1,4 +1,4 @@
-<div class="card offset-md-1 col-md-4">
+<div class="card">
         <div class="container">
             <h4><b>{{name}}</b></h4>
             <p>{{description}}</p>
