--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -1,12 +1,20 @@
 <app-header></app-header>
-<div *ngIf="email" class="col-md-6 p-3">
-    <span>
-        <b>Hello {{email}}</b>
-    </span>
+<div class="container">
+    <div class="row">
+        <div *ngIf="email" class="col-md-6 p-3">
+            <span>
+                <b>Hello {{email}}</b>
+            </span>
+        </div>
+        <div *ngIf="email" class="col-md-6 p-3">
+            <span>
+                <a (click)="redirectToProfile()">Go to Profile</a>
+            </span>
+        </div>
+        <div *ngIf="language" class="row mt-5">
+            <div *ngFor="let lang of language" class="col-md-6 p-3">
+                <app-language-card  [name]="lang.name" [description]="lang.description"></app-language-card>
+            </div>
+        </div>
+    </div>
 </div>
-<div *ngIf="email" class="col-md-4 p-3">
-    <span>
-        <a (click)="redirectToProfile()">Go to Profile</a>
-    </span>
-</div>
-<app-language-card [name]="email" [description]="authToken"></app-language-card>
